add SEO for ragbot

--- a/docs/docs/Memory/example.mdx
+++ b/docs/docs/Memory/example.mdx
@@ -1,6 +1,10 @@
 ---
 id: Example
 sidebar_position: 2
+title: A simple RAGBot
+description: Explore a super clean implementation of RAG
+image: http://socialagi.dev/doc_images/ragbot.png
+keywords: [RAG, memory, retrieval]
 ---
 import ExampleCard from "@site/src/components/ExampleCard";
 
